--- a/production/docker-compose.example.yaml
+++ b/production/docker-compose.example.yaml
@@ -21,6 +21,8 @@ services:
       - URL_REACT=http://localhost
     ports:
       - 8080:8080
+    expose:
+      - 8080
   nginx:
     image: nginx:1.23.3
     ports:
