--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tippyjs/react": "^4.2.6",
     "ajv": "^8.17.1",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "i18next": "^23.16.4",
     "i18next-browser-languagedetector": "^8.0.0",
