--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@fvilers/disable-react-devtools": "^1.3.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -25,8 +26,10 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.0",
+    "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
+    "redux": "^5.0.1",
     "sass": "^1.80.5",
     "stream": "^0.0.3",
     "web-vitals": "^2.1.4"
