--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "draft-js-import-html": "^1.4.1",
     "i18next": "^23.16.4",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.2",
@@ -27,6 +29,7 @@
     "react-bootstrap": "^2.10.5",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-i18next": "^15.1.0",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
