--- a/production/default.conf
+++ b/production/default.conf
@@ -1,37 +1,29 @@
-upstream backend-estudy {
-    server backend:8080;
-}
-
 server {
     listen       80;
     listen  [::]:80;
-    server_name  localhost;
+    server_name  chillerlish.zapto.org;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
+    # proxy for web 
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri /index.html;
     }
 
-    location /api {
-        proxy_pass http://backend-estudy;
-        
+    # proxy for api
+    location /api/ {
+        proxy_pass http://chillerlish.zapto.org:8081/api/;
+        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_set_header X-NginX-Proxy true;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    #error_page  404              /404.html;
-
-    # redirect server error pages to the static page /50x.html
-    #
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
-
 }
 
