Backend - API getTopUsersByGrammarId, getVocabularyLearningPercentage, getCorrectAnswerPercentageByGrammars, getCorrectAnswerPercentageByParts. - handle processing learning result. Frontend: - Processing Learning Result UI

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@nivo/bar": "^0.88.0",
     "@nivo/core": "^0.88.0",
     "@nivo/line": "^0.88.0",
+    "@nivo/radar": "^0.88.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
