--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,3 +16,6 @@ DB_DIALECT=mysql
 MAX_NUMBER_SCHEDULE=10
 
 FIREBASE_STORAGE_BUCKET=**********************
+
+SMTP_EMAIL=n20dccn083@student.ptithcm.edu.vn
+SMTP_PASSWORD="*************************"
