--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,4 @@
 PORT=3000
 REACT_APP_BACKEND_URL=http://localhost:8080/
 REACT_APP_NODE_ENV=development
+REACT_APP_CAPTCHA_SITE_KEY="**********************"
