--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,9 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^15.1.0",
+    "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
